--- a/docs/Makefile
+++ b/docs/Makefile
@@ -5,7 +5,7 @@
 SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
 SOURCEDIR     = source
-BUILDDIR      = ../../DatesTimes-docs
+BUILDDIR      = ../
 
 # Put it first so that "make" without argument is like "make help".
 help:
